grcqt: Update en_US translation
Signed-off-by: Håkon Vågsether <hakon.vagsether@gmail.com>

--- a/grc/gui_qt/resources/language/add-translation.txt
+++ b/grc/gui_qt/resources/language/add-translation.txt
@@ -8,9 +8,10 @@
 
 # Updating Translatable Strings
 
-1. Go to grcqt directory
+1. Go to project root
 2. Mark translatable strings with _():
     print ("example") --> print(_("example"))
 3. Run xgettext:
-    xgettext -L Python --keyword=_ -d grc -o companion/resources/language/grc.pot `find . -name "*.py"`
-4. Update .po files
+    xgettext -L Python --keyword=_ -d grc -o grc/gui_qt/resources/language/grc.pot `find . -name "*.py"`
+4. Open grc/gui_qt/resources/language/en_US/LC_MESSAGES/grc.po using Poedit or similar
+5. Translation -> Update from POT file -> choose grc/gui_qt/resources/language/grc.pot
